--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5081,6 +5081,18 @@
   timestamp = {2024.06.02},
 }
 
+@Article{Beltagy2020,
+  author    = {Beltagy, I. and Peters, M. E. and Cohan, A.},
+  title     = {Longformer: The Long-Document Transformer},
+  journal   = {arXiv},
+  year      = {2020},
+  volume    = {cs.CL},
+  pages     = {2004.05150},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://arxiv.org/abs/2004.05150},
+}
+
 @InCollection{Bemong2010,
   author    = {Bemong, N. and Borghart, P.},
   title     = {State of the Art},
@@ -5255,6 +5267,18 @@
   doi       = {10.1515/cllt-2014-0009},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@InProceedings{BenVeyseh2021,
+  author        = {Ben Veyseh, A. P. and Nguyen, M. V. and Trung, N. N. and Min, B. and Nguyen, T. H.},
+  title         = {Modeling Document-Level Context for Event Detection via Important Context Selection},
+  booktitle     = {Conference on Empirical Methods in Natural Language Processing},
+  year          = {2021},
+  pages         = {5403-5413},
+  __markedentry = {[Vincent:]},
+  doi           = {10.18653/v1/2021.emnlp-main.439},
+  owner         = {Vincent},
+  timestamp     = {2022.04.29},
 }
 
 @Article{Benzi2015,
@@ -11434,6 +11458,18 @@
   timestamp = {2017.08.22},
 }
 
+@Article{Child2019,
+  author    = {Child, R. and Gray, S. and Radford, A. and Sutskever, I.},
+  title     = {Generating Long Sequences with Sparse Transformers},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.LG},
+  pages     = {1904.10509},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://arxiv.org/abs/1904.10509},
+}
+
 @Book{Childress2017,
   title     = {Under the cover: The creation, production, and reception of a novel},
   publisher = {Princeton University Press},
@@ -11647,6 +11683,16 @@
   doi       = {10.1109/TBDATA.2016.2628725},
   owner     = {Vincent},
   timestamp = {2016.12.02},
+}
+
+@InProceedings{Choromanski2021,
+  author    = {Choromanski, K. and Likhosherstov, V. and Dohan, D. and Song, X. and Gane, A. and Sarlos, T. and Hawkins, P. and Davis, J. and Mohiuddin, A. and Kaiser, L. and Belanger, D. and Colwell, L. and Weller, A.},
+  title     = {Rethinking Attention with Performers},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://iclr.cc/virtual/2021/poster/2726},
 }
 
 @InProceedings{Choudhury2010,
@@ -15421,6 +15467,16 @@
   doi       = {10.1109/ICCV.2011.6126306},
   owner     = {Vincent},
   timestamp = {2018.11.11},
+}
+
+@InProceedings{Ding2020,
+  author    = {Ding, M. and Zhou, C. and Yang, H. and Tang, J.},
+  title     = {CogLTX: Applying BERT to Long Texts},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2021.12.17},
+  url       = {https://proceedings.neurips.cc/paper/2020/hash/96671501524948bc3937b4b30d0e57b9-Abstract.html},
 }
 
 @InProceedings{Ding2020a,
@@ -24310,7 +24366,18 @@
   timestamp = {2020.01.05},
 }
 
-@Article{Guo2019,
+@InProceedings{Guo2019,
+  author    = {Guo, D. and Tang, D. and Duan, N. and Zhou, M. and Yin, J.},
+  title     = {Coupling Retrieval and Meta-Learning for Context-Dependent Semantic Parsing},
+  booktitle = {57th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {855-866},
+  doi       = {10.18653/v1/p19-1082},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
+@Article{Guo2019a,
   author    = {Guo, S. X. and Sun, X. and Wang, S. X. and Gao, Y. and Feng, J.},
   title     = {Attention-Based Character-Word Hybrid Neural Networks With Semantic and Structural Information for Identifying of Urgent Posts in {MOOC} Discussion Forums},
   journal   = {IEEE Access},
@@ -31028,6 +31095,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.08.18},
 }
 
+@InProceedings{Katharopoulos2020,
+  author    = {Katharopoulos, A. and Vyas, A. and Pappas, N. and Fleuret, F.},
+  title     = {Transformers are {RNNs}: Fast Autoregressive Transformers with Linear Attention},
+  booktitle = {37th International Conference on Machine Learning},
+  year      = {2020},
+  volume    = {119},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {5156-5165},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://proceedings.mlr.press/v119/katharopoulos20a},
+}
+
 @InProceedings{Katti2011,
   author    = {Katti, H. and Yadati, K. and Kankanhalli, M. and Tat-Seng, C.},
   title     = {Affective Video Summarization and Story Board Generation Using Pupillary Dilation and Eye Gaze},
@@ -32177,6 +32257,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.20},
   url       = {https://www.bibsonomy.org/bibtex/2a5a7debef9c7b1747209b47ae80687e8/josephausterwei},
+}
+
+@InProceedings{Kitaev2020,
+  author    = {Kitaev, N. and Kaiser, L. and Levskaya, A.},
+  title     = {Reformer: The Efficient Transformer},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://openreview.net/forum?id=rkgNKkHtvB},
 }
 
 @Book{Kitchen2003,
@@ -37778,6 +37868,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.03.15},
 }
 
+@InProceedings{Liu2019e,
+  author    = {Liu, T. and Yao, J.-G. and Lin, C.-Y.},
+  title     = {Towards Improving Neural Named Entity Recognition with Gazetteers},
+  booktitle = {57th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {5301-5307},
+  doi       = {10.18653/v1/p19-1524},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Article{Liu2020,
   author    = {Liu, W. and Zhou, P. and Zhao, Z. and Wang, Z. and Ju, Q. and Deng, H. and Wang, P.},
   title     = {K-BERT: Enabling Language Representation with Knowledge Graph},
@@ -38566,6 +38667,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@InProceedings{Luo2015,
+  author    = {Luo, G. and Huang, X. and Lin, C.-Y. and Nie, Z.},
+  title     = {Joint Entity Recognition and Disambiguation},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2015},
+  pages     = {879-888},
+  doi       = {10.18653/v1/d15-1104},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Article{Luo2022,
   author    = {Luo, T.},
   title     = {Novel Multirole-Oriented Deep Learning Text Classification Model},
@@ -38576,6 +38688,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1155/2022/8942841},
   owner     = {Vincent},
   timestamp = {2022.04.02},
+}
+
+@InProceedings{Luoma2020,
+  author    = {Luoma, J. and Pyysalo, S.},
+  title     = {Exploring Cross-sentence Contexts for Named Entity Recognition with {BERT}},
+  booktitle = {28th International Conference on Computational Linguistics},
+  year      = {2020},
+  pages     = {904-914},
+  doi       = {10.18653/v1/2020.coling-main.78},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @InProceedings{Luqman2013,
@@ -51591,6 +51714,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.22},
 }
 
+@InProceedings{Robertson1994,
+  author    = {Robertson, S. E. and Walker, S.},
+  title     = {Some Simple Effective Approximations to the 2-Poisson Model for Probabilistic Weighted Retrieval},
+  booktitle = {17th Annual International ACM-SIGIR Conference on Research and Development in Information Retrieval},
+  year      = {1994},
+  pages     = {232-241},
+  publisher = {Springer},
+  doi       = {10.1007/978-1-4471-2099-5_24},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Article{Roberts-Smith2013,
   author    = {Roberts-Smith, J. and DeSouza-Coelho, S. and Dobson, T. M. and Gabriele, S. and Rodriguez-Arenas, O. and Ruecker, S. and Sinclair, S. and Akong, A. and Bouchard, M. and Hong, M. and Jakacki, D. and Lam, D. and Kovacs, A. and Northam, L. and So, D.},
   title     = {Visualizing Theatrical Text: From Watching the Script to the Simulated Environment for Theatre (SET)},
@@ -55171,6 +55306,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.08.31},
   url       = {https://books.google.fr/?id=8NQzQwAACAAJ},
+}
+
+@InProceedings{Seyler2018,
+  author    = {Seyler, D. and Dembelova, T. and Del Corro, L. and Hoffart, J. and Weikum, G.},
+  title     = {A Study of the Importance of External Knowledge in the Named Entity Recognition Task},
+  booktitle = {56th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {241-246},
+  doi       = {10.18653/v1/p18-2039},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @Article{Seymour1903,
@@ -59503,6 +59649,44 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jmlr.org/papers/v21/20-091.html},
 }
 
+@InProceedings{Tay2020,
+  author    = {Tay, Y. and Bahri, D. and Yang, L. and Metzler, D. and Juan, D.-C.},
+  title     = {Sparse Sinkhorn Attention},
+  booktitle = {37th International Conference on Machine Learning},
+  year      = {2020},
+  volume    = {119},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {9438-9447},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://proceedings.mlr.press/v119/tay20a.html},
+}
+
+@Article{Tay2020a,
+  author    = {Tay, Y. and Dehghani, M. and Abnar, S. and Shen, Y. and Bahri, D. and Pham, P. and Rao, J. and Yang, L. and Ruder, S. and Metzler, D.},
+  title     = {Long Range Arena: A Benchmark for Efficient Transformers},
+  journal   = {arXiv},
+  year      = {2020},
+  volume    = {cs.LG},
+  pages     = {2011.04006},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://arxiv.org/abs/2011.04006},
+}
+
+@InProceedings{Tay2021,
+  author    = {Tay, Y. and Bahri, D. and Metzler, D. and Juan, D.-C. and Zhao, Z. and Zheng, C.},
+  title     = {Synthesizer: Rethinking Self-Attention for Transformer Models},
+  booktitle = {38th International Conference on Machine Learning},
+  year      = {2021},
+  volume    = {139},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {10183-10192},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://proceedings.mlr.press/v139/tay21a.html},
+}
+
 @Article{Taylor1953,
   author    = {Taylor, W. L.},
   title     = {``Cloze Procedure'': A New Tool for Measuring Readability},
@@ -63143,6 +63327,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Wang2020a,
+  author    = {Wang, S. and Li, B. Z. and Khabsa, M. and Fang, H. and Ma, H.},
+  title     = {Linformer: Self-Attention with Linear Complexity},
+  journal   = {arXiv},
+  year      = {2020},
+  volume    = {cs.LG},
+  pages     = {2006.04768},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://arxiv.org/abs/2006.04768},
+}
+
+@Article{Wang2020b,
   author    = {Wang, M. and Du, X. and Shu, X. and Wang, X. and Tang, J.},
   title     = {Deep supervised feature selection for social relationship recognition},
   journal   = {Pattern Recognition Letters},
@@ -63150,18 +63346,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {138},
   pages     = {410-416},
   doi       = {10.1016/j.patrec.2020.08.005},
-  owner     = {Vincent},
-  timestamp = {2021.09.19},
-}
-
-@Article{Wang2020b,
-  author    = {Wang, M. and Shu, X. and Feng, J. and Wang, X. and Tang, J.},
-  title     = {Deep multi-person kinship matching and recognition for family photos},
-  journal   = {Pattern Recognition},
-  year      = {2020},
-  volume    = {105},
-  pages     = {107342},
-  doi       = {10.1016/j.patcog.2020.107342},
   owner     = {Vincent},
   timestamp = {2021.09.19},
 }
@@ -63177,6 +63361,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.03.25},
 }
 
+@Article{Wang2020d,
+  author    = {Wang, M. and Shu, X. and Feng, J. and Wang, X. and Tang, J.},
+  title     = {Deep multi-person kinship matching and recognition for family photos},
+  journal   = {Pattern Recognition},
+  year      = {2020},
+  volume    = {105},
+  pages     = {107342},
+  doi       = {10.1016/j.patcog.2020.107342},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Wang2020t,
   author    = {Wang, C. and Wang, C. and Wang, Z. and Ye, X. and Yu, P. S.},
   title     = {Edge2vec: Edge-based Social Network Embedding},
@@ -63188,6 +63384,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3391298},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@InProceedings{Wang2021,
+  author    = {Wang, X. and Jiang, Y. and Bach, N. and Wang, T. and Huang, Z. and Huang, F. and Tu, K.},
+  title     = {Improving Named Entity Recognition by External Context Retrieving and Cooperative Learning},
+  booktitle = {59th Annual Meeting of the Association for Computational Linguistics / 11th International Joint Conference on Natural Language Processing},
+  year      = {2021},
+  pages     = {1800-1812},
+  doi       = {10.18653/v1/2021.acl-long.142},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @Article{Wang2022n,
@@ -65372,6 +65579,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.04.20},
 }
 
+@InProceedings{Xu2020,
+  author    = {Xu, J. and Crego, J. and Senellart, J.},
+  title     = {Boosting Neural Machine Translation with Similar Translations},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {1580-1590},
+  doi       = {10.18653/v1/2020.acl-main.144},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @InProceedings{Xu2021,
   author    = {Xu, M. and Li, L. and Wong, D. F. and Liu, Q. and Chao, L. S.},
   title     = {Document Graph for Neural Machine Translation},
@@ -65508,6 +65726,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Yamada2020,
+  author        = {Yamada, I. and Asai, A. and Shindo, H. and Takeda, H. and Matsumoto, Y.},
+  title         = {{LUKE}: Deep Contextualized Entity Representations with Entity-aware Self-attention},
+  booktitle     = {Conference on Empirical Methods in Natural Language Processing},
+  year          = {2020},
+  pages         = {6442-6454},
+  __markedentry = {[Vincent:]},
+  doi           = {10.18653/v1/2020.emnlp-main.523},
+  owner         = {Vincent},
+  timestamp     = {2021.03.21},
+}
+
+@InProceedings{Yamada2020a,
   author    = {Yamada, I. and Asai, A. and Sakuma, J. and Shindo, H. and Takeda, H. and Takefuji, Y. and Matsumoto, Y.},
   title     = {{Wikipedia2Vec}: An Efficient Toolkit for Learning and Visualizing the Embeddings of Words and Entities from Wikipedia},
   booktitle = {Conference on Empirical Methods in Natural Language Processing: System Demonstrations},
@@ -66656,6 +66886,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://antoniozadra.com/sites/default/files/biblio/zadra_dream_content_ch_50_main.pdf},
 }
 
+@InProceedings{Zaheer2020,
+  author    = {Zaheer, M. and Guruganesh, G. and Dubey, K. A. and Ainslie, J. and Alberti, C. and Ontanon, S. and Pham, P. and Ravula, A. and Wang, Q. and Yang, L. and Ahmed, A.},
+  title     = {Big bird: Transformers for longer sequences},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2020},
+  pages     = {17283-17297},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://proceedings.neurips.cc/paper/2020/hash/c8512d142a2d849725f31a9a7a361ab9-Abstract.html},
+}
+
 @Article{Zajonc1968,
   author    = {Zajonc, R. B.},
   title     = {Attitudinal effects of mere exposure.},
@@ -67271,6 +67512,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.04.02},
   url       = {https://arxiv.org/abs/2203.13281},
+}
+
+@InProceedings{Zhang2022a,
+  author    = {Zhang, X. and Jiang, Y. and Wang, X. and Hu, X. and Sun, Y. and Xie, P. and Zhang, M.},
+  title     = {Domain-specific NER via retrieving correlated samples},
+  booktitle = {29th International Conference on Computational Linguistics},
+  year      = {2022},
+  pages     = {2398-2404},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://aclanthology.org/2022.coling-1.211/},
 }
 
 @InProceedings{Zhang2022at,
