--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3344,6 +3344,18 @@
   timestamp = {2020.01.05},
 }
 
+@Article{Bajaj2016,
+  author    = {Bajaj, P. and Campos, D. and Craswell, N. and Deng, L. and Gao, J. and Liu, X. and Majumder, R. and McNamara, A. and Mitra, B. and Nguyen, T. and Rosenberg, M. and Song, X. and Stoica, A. and Tiwary, S. and Wang, T.},
+  title     = {{MS MARCO}: A Human Generated MAchine Reading COmprehension Dataset},
+  journal   = {arXiv},
+  year      = {2016},
+  volume    = {cs.CL},
+  pages     = {1611.09268},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+  url       = {https://arxiv.org/abs/1611.09268},
+}
+
 @InProceedings{Bajracharya2018,
   author    = {Bajracharya, A. and Shrestha, S. and Upadhyaya, S. and Shrawan, B. and Shakya, S.},
   title     = {Automated Characters Recognition and Family Relationship Extraction from Stories},
@@ -38274,6 +38286,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.07.04},
 }
 
+@Article{Lou2024,
+  author    = {Lou, R. and Zhang, K. and Yin, W.},
+  title     = {Large Language Model Instruction Following: A Survey of Progresses and Challenges},
+  journal   = {Computational Linguistics},
+  year      = {2024},
+  volume    = {in press},
+  doi       = {10.1162/coli_a_00523},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+}
+
 @Article{LOUWERSE2006,
   author    = {Louwerse, M. and Cai, Z. and Hu, X. and Ventura, M. and Jeuniaux, P.},
   title     = {Cognitively inspired natural-language based knowledge representations: Further explorations of latent semantic analysis},
@@ -43840,6 +43863,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://digitalhumanities.org:8081/dhq/vol/8/3/000183/000183.html},
 }
 
+@InProceedings{Muennighoff2023,
+  author    = {Muennighoff, N. and Wang, T. and Sutawika, L. and Roberts, A. and Biderman, S. and Le Scao, T. and Bari, M. S. and Shen, S. and Yong, Z. X. and Schoelkopf, H. and Tang, X. and Radev, D. and Aji, A. F. and Almubarak, K. and Albanie, S. and Alyafeai, Z. and Webson, A. and Raff, E. and Raffel, C.},
+  title     = {Crosslingual Generalization through Multitask Finetuning},
+  booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
+  year      = {2023},
+  pages     = {15991-16111},
+  doi       = {10.18653/v1/2023.acl-long.891},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+}
+
 @InProceedings{Mugelli2017,
   author    = {Mugelli, G. and Bellandi, A. and Boschetti, F. and Khan, F.},
   title     = {Designing an Ontology for the Study of Ritual in Ancient Greek Tragedy},
@@ -45637,6 +45671,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/acprof:oso/9780195188523.001.0001},
   owner     = {Vincent},
   timestamp = {2021.12.27},
+}
+
+@Article{Nogueira2019,
+  author    = {Nogueira, R. and Cho, K.},
+  title     = {Passage Re-ranking with {BERT}},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.IR},
+  pages     = {1901.04085},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+  url       = {https://arxiv.org/abs/1901.04085},
+}
+
+@InProceedings{Nogueira2020,
+  author    = {Nogueira, R. and Jiang, Z. and Pradeep, R. and Lin, J.},
+  title     = {Document Ranking with a Pretrained Sequence-to-Sequence Model},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {708-718},
+  doi       = {10.18653/v1/2020.findings-emnlp.63},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
 }
 
 @Article{Noh2005,
@@ -53475,6 +53532,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.04.24},
 }
 
+@InProceedings{Sanh2022,
+  author    = {Sanh, V. and Webson, A. and Raffel, C. and Bach, S. and Sutawika, L. and Alyafeai, Z. and Chaffin, A. and Stiegler, A. and Raja, A. and Dey, M. and Bari, M. S. and Xu, C. and Thakker, U. and Sharma Sharma, S. and Szczechla, E. and Kim, T. and Chhablani, G. and Nayak, N. and Datta, D. and Chang, J. and Jiang, M. T.-J. and Wang, H. and Manica, M. and Shen, S. and Yong, Z. X. and Pandey, H. and Bawden, R. and Wang, T. and Neeraj, T. and Rozen, J. and Sharma, A. and Santilli, A. and Fevry, T. and Fries, J. A. and Teehan, R. and Le Scao, T. and Biderman, S. and Gao, L. and Wolf, T. and Rush, A. M.},
+  title     = {Multitask prompted training enables zero-shot task generalization},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+  url       = {https://openreview.net/forum?id=9Vrb9D0WI4},
+}
+
 @InProceedings{Sanjaya2024,
   author    = {Sanjaya E. R., N. A. and Malini, N. L. N. S. and Widiartha, I M. and Mahatagandha, P. C.},
   title     = {A Balinese folklore digital portal with natural language processing framework},
@@ -55598,6 +55665,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://pudding.cool/2017/07/comics/},
   owner        = {Vincent},
   timestamp    = {2022.03.13},
+}
+
+@InProceedings{Sheng2019,
+  author    = {Sheng, E. and Chang, K.-W. and Natarajan, P. and Peng, N.},
+  title     = {The Woman Worked as a Babysitter: On Biases in Language Generation},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {3407-3412},
+  doi       = {10.18653/v1/d19-1339},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
 }
 
 @Article{Shepard1957,
@@ -59687,6 +59765,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://proceedings.mlr.press/v139/tay21a.html},
 }
 
+@Article{Tay2022,
+  author    = {Tay, Y. and Dehghani, M. and Bahri, D. and Metzler, D.},
+  title     = {Efficient Transformers: A Survey},
+  journal   = {ACM Computing Surveys},
+  year      = {2022},
+  volume    = {55},
+  number    = {6},
+  pages     = {109},
+  doi       = {10.1145/3530811},
+  owner     = {Vincent},
+  timestamp = {2024.05.30},
+}
+
 @Article{Taylor1953,
   author    = {Taylor, W. L.},
   title     = {``Cloze Procedure'': A New Tool for Measuring Readability},
@@ -60658,6 +60749,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1073445.1073478},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Touvron2023a,
+  author    = {Touvron, H. and Lavril, T. and Izacard, G. and Martinet, X. and Lachaux, M.-A. and Lacroix, T. and Rozière, B. and Goyal, N. and Hambro, E. and Azhar, F. and Rodriguez, A. and Joulin, A. and Grave, E. and Lample, G.},
+  title     = {LLaMA: Open and Efficient Foundation Language Models},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2302.13971},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+  url       = {https://arxiv.org/abs/2302.13971},
 }
 
 @Article{Traag2009,
@@ -63726,6 +63829,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.04.24},
   url       = {https://proceedings.neurips.cc/paper_files/paper/2022/hash/9d5609613524ecf4f15af0f7b31abca4-Abstract-Conference.html},
+}
+
+@InProceedings{Wei2022a,
+  author    = {Wei, J. and Bosma, M. and Zhao, V. and Guu, K. and Yu, A. W. and Lester, B. and Du, N. and Dai, A. M. and Le, Q. V},
+  title     = {Finetuned Language Models are Zero-Shot Learners},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+  url       = {https://openreview.net/forum?id=gEZrGCozdqR},
 }
 
 @TechReport{Weimann1980,
