--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -45603,6 +45603,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://boydellandbrewer.com/classical-literature-and-learning-in-medieval-irish-narrative-hb.html},
 }
 
+@InProceedings{Nishihara2021,
+  author    = {Nishihara, Y. and Ma, J. and Yamanishi, R.},
+  title     = {A Support Interface for Remembering Events in Novels by Visualizing Time-Series Information of Characters and Their Existing Places},
+  booktitle = {23rd HCI International Conference},
+  year      = {2021},
+  volume    = {12765},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {76-87},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-78321-1_7},
+  owner     = {Vincent},
+  timestamp = {2024.06.25},
+}
+
 @Article{NitinBhatia2010,
   author    = {Nitin Bhatia, V.},
   title     = {Survey of Nearest Neighbor Techniques},
