--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2762,6 +2762,17 @@
   timestamp = {2023.08.11},
 }
 
+@InProceedings{Asai2015,
+  author    = {Asai, H. and Yamana, H.},
+  title     = {Detecting Learner's To-Be-Forgotten Items using Online Handwritten Data},
+  booktitle = {15th New Zealand Conference on Human-Computer Interaction},
+  year      = {2015},
+  pages     = {17-20},
+  doi       = {10.1145/2808047.2808049},
+  owner     = {Vincent},
+  timestamp = {2024.06.26},
+}
+
 @InCollection{AshmanRowe2023,
   author    = {Ashman Rowe, E.},
   title     = {The Network of Gottskálksannáll},
@@ -7809,7 +7820,7 @@
 
 @Article{Braga1970,
   author    = {Braga, P.},
-  title     = {How to apply the multi-strand narrative of American TV shows in a British series: the Downton Abbey’s case},
+  title     = {How to apply the multi-strand narrative of American TV shows in a British series: the Downton Abbey's case},
   journal   = {Communication \& Society},
   year      = {1970},
   volume    = {29},
@@ -8273,6 +8284,19 @@
   doi       = {10.1016/s0378-8733(99)00017-9},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Article{Brewer2017,
+  author    = {Brewer, R. N. and Morris, M. R. and Lindley, S. E.},
+  title     = {How to Remember What to Remember: Exploring Possibilities for Digital Reminder Systems},
+  journal   = {ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies},
+  year      = {2017},
+  volume    = {1},
+  number    = {3},
+  pages     = {38},
+  doi       = {10.1145/3130903},
+  owner     = {Vincent},
+  timestamp = {2024.06.26},
 }
 
 @Article{Brezovnik2015,
@@ -10275,7 +10299,7 @@
 
 @Article{Casey2021,
   author    = {Casey, K. and Novick, K. and Lourenco, S. F.},
-  title     = {Sixty years of gender representation in children’s books: Conditions associated with overrepresentation of male versus female protagonists},
+  title     = {Sixty years of gender representation in children's books: Conditions associated with overrepresentation of male versus female protagonists},
   journal   = {PLoS ONE},
   year      = {2021},
   volume    = {16},
@@ -20930,7 +20954,7 @@
 
 @InProceedings{Fujishima2024,
   author    = {Fujishima, K. and Shan, J. and Nishihara, Y.},
-  title     = {Events Remembering Support Via Character Relationships’ Visualization of Novels},
+  title     = {Events Remembering Support Via Character Relationships' Visualization of Novels},
   booktitle = {26th HCI International Conference / Human Interface and the Management of Information},
   year      = {2024},
   volume    = {14690},
@@ -36754,6 +36778,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.20},
 }
 
+@InProceedings{Li2015e,
+  author    = {Li, Y.-N. and Li, D.-J. and Zhang, K.},
+  title     = {Metaphoric Transfer Effect in Information Visualization Using Glyphs},
+  booktitle = {8th International Symposium on Visual Information Communication and Interaction},
+  year      = {2015},
+  pages     = {121-130},
+  doi       = {10.1145/2801040.2801062},
+  owner     = {Vincent},
+  timestamp = {2024.06.26},
+}
+
 @Article{Li2015o,
   author    = {Li, Z. X. and He, L. L. and Li, Y. R.},
   title     = {A novel multiobjective particle swarm optimization algorithm for signed network community detection},
@@ -44142,7 +44177,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Murray2011,
   author    = {Murray, J.},
-  title     = {At the Surface of Romantic Interiority: Joanna Baillie’s Orra},
+  title     = {At the Surface of Romantic Interiority: Joanna Baillie's Orra},
   journal   = {Romanticism and Victorianism on the Net},
   year      = {2011},
   number    = {56},
@@ -46999,6 +47034,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2647868.2654990},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@InProceedings{Pang2016,
+  author    = {Pang, P. C.-I. and Biuk-Aghai, R. P. and Yang, M.},
+  title     = {What Makes You Think This Is a Map?: Suggestions for Creating Map-like Visualisations},
+  booktitle = {9th International Symposium on Visual Information Communication and Interaction},
+  year      = {2016},
+  pages     = {75-82},
+  doi       = {10.1145/2968220.2968239},
+  owner     = {Vincent},
+  timestamp = {2024.06.26},
 }
 
 @Article{Pang2023,
@@ -55492,6 +55538,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.06.23},
 }
 
+@InProceedings{Shan2020,
+  author    = {Shan, J. and Nishihara, Y. and Maeda, A. and Yamanishi, R.},
+  title     = {Extraction of Question-related Sentences for Reading Comprehension Tests via Attention Mechanism},
+  booktitle = {International Conference on Technologies and Applications of Artificial Intelligence},
+  year      = {2020},
+  pages     = {23-28},
+  doi       = {10.1109/taai51410.2020.00013},
+  owner     = {Vincent},
+  timestamp = {2024.06.26},
+}
+
 @InProceedings{Shang2012,
   author    = {Shang, J. and Liu, L. and Xie, F. and Chen, Z. and Miao, J. and Fang, X. and Wu, C.},
   title     = {A Real-Time Detecting Algorithm for Tracking Community Structure of Dynamic Networks},
@@ -57901,6 +57958,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.07.01},
   url       = {https://uporabna-informatika.si/index.php/ui/article/view/79},
+}
+
+@InProceedings{Stawarz2014,
+  author    = {Stawarz, K. and Cox, A. L. and Blandford, A.},
+  title     = {Don't forget your pill!: designing effective medication reminder apps that support users' daily routines},
+  booktitle = {SIGCHI Conference on Human Factors in Computing Systems},
+  year      = {2014},
+  pages     = {2269-2278},
+  doi       = {10.1145/2556288.2557079},
+  owner     = {Vincent},
+  timestamp = {2024.06.26},
 }
 
 @Article{Steglich2010,
@@ -64852,7 +64920,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Wimmer1983,
   author    = {Wimmer, H.},
-  title     = {Beliefs about beliefs: Representation and constraining function of wrong beliefs in young children’s understanding of deception},
+  title     = {Beliefs about beliefs: Representation and constraining function of wrong beliefs in young children's understanding of deception},
   journal   = {Cognition},
   year      = {1983},
   volume    = {13},
