--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -33392,6 +33392,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh2018.adho.org/quantitative-microanalysis-different-methods-of-digital-drama-analysis-in-comparison/},
 }
 
+@Article{Krautter2018a,
+  author    = {Krautter, B. and Pagel, J. and Reiter, N. and Willand, M.},
+  title     = {Eponymous Heroes and Protagonists - Character Classification in German-Language Dramas},
+  journal   = {LitLab Pamphlet},
+  year      = {2018},
+  volume    = {7},
+  pages     = {1-55},
+  owner     = {Vincent},
+  timestamp = {2024.06.27},
+  url       = {https://www.digitalhumanitiescooperation.de/wp-content/uploads/2019/07/p07_krautter_et_al_eng.pdf},
+}
+
 @InCollection{Krautter2024,
   author    = {Krautter, B.},
   title     = {The Scales of (Computational) Literary Studies: Martin Mueller's Concept of Scalable Reading in Theory and Practice},
@@ -42110,6 +42122,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.06.19},
   url       = {https://arxiv.org/abs/2406.11368},
+}
+
+@Article{Michel2024a,
+  author    = {Michel, G. and Epure, E. V. and Hennequin, R. and Cerisara, C.},
+  title     = {A Realistic Evaluation of {LLMs} for Quotation Attribution in Literary Texts: A Case Study of {LLaMa3}},
+  journal   = {arXiv},
+  year      = {2024},
+  volume    = {cs.CL},
+  pages     = {2406.11380},
+  owner     = {Vincent},
+  timestamp = {2024.06.27},
+  url       = {https://arxiv.org/abs/2406.11380},
 }
 
 @InProceedings{Mihalcea2005,
@@ -63772,6 +63796,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.26},
   url       = {https://press.princeton.edu/titles/6768.html},
+}
+
+@Article{Watts1999a,
+  author    = {Watts, D. J.},
+  title     = {Networks, Dynamics, and the Small‐World Phenomenon},
+  journal   = {American Journal of Sociology},
+  year      = {1999},
+  volume    = {105},
+  number    = {2},
+  pages     = {493–527},
+  doi       = {10.1086/210318},
+  owner     = {Vincent},
+  timestamp = {2024.06.27},
 }
 
 @Book{Watts2004,
