--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -42,6 +42,18 @@
   url       = {https://www.bloomsbury.com/uk/english-syntax-and-argumentation-9781137605795/},
 }
 
+@Article{AarupNielsen2011,
+  author    = {Årup Nielsen, F.},
+  title     = {A new ANEW: Evaluation of a word list for sentiment analysis in microblogs},
+  journal   = {arXiv},
+  year      = {2011},
+  volume    = {cs.IR},
+  pages     = {1103.2903},
+  owner     = {Vincent},
+  timestamp = {2024.06.28},
+  url       = {https://arxiv.org/abs/1103.2903},
+}
+
 @InProceedings{Abbasi2007,
   author    = {Abbasi, A. and Chen, H.},
   title     = {Categorization and analysis of text in computer mediated communication archives using visualization},
@@ -21521,6 +21533,18 @@
   timestamp = {2021.06.21},
 }
 
+@Article{Gao2021,
+  author    = {Gao, C. and Lei, W. and He, X. and de Rijke, M. and Chua, T.-S.},
+  title     = {Advances and challenges in conversational recommender systems: A survey},
+  journal   = {AI Open},
+  year      = {2021},
+  volume    = {2},
+  pages     = {100–126},
+  doi       = {10.1016/j.aiopen.2021.06.002},
+  owner     = {Vincent},
+  timestamp = {2024.06.28},
+}
+
 @InProceedings{Gao2023,
   author    = {Gao, Q. C. and Emami, A.},
   title     = {The Turing Quest: Can Transformers Make Good NPCs?},
@@ -36646,6 +36670,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.org/D08-1003/},
 }
 
+@InProceedings{Li2009,
+  author    = {Li, T. and Zhang, Y. and Sindhwani, V.},
+  title     = {A Non-negative Matrix Tri-factorization Approach to Sentiment Classification with Lexical Prior Knowledge},
+  booktitle = {Joint Conference of the 47th Annual Meeting of the ACL and the 4th International Joint Conference on Natural Language Processing of the AFNLP},
+  year      = {2009},
+  pages     = {244-252},
+  owner     = {Vincent},
+  timestamp = {2024.06.28},
+  url       = {https://aclanthology.org/P09-1028/},
+}
+
 @InProceedings{Li2012,
   author    = {Li, B. and Lee-Urban, S. and Appling, D. S. and Riedl, M .O.},
   title     = {Automatically learning to tell stories about social situations from the crowd},
@@ -44656,6 +44691,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.mlgworkshop.org/2016/paper/MLG2016_paper_26.pdf},
 }
 
+@Article{Naseer2022,
+  author    = {Naseer, S. and Ghafoor, M. M. and bin Khalid Alvi, S. and Kiran, A. and Ur Rahmand, S. and Murtazae, G. and Murtaza, G.},
+  title     = {Named Entity Recognition (NER) in NLP Techniques, Tools Accuracy and Performance.},
+  journal   = {Pakistan Journal of Multidisciplinary Research},
+  year      = {2022},
+  volume    = {2},
+  number    = {2},
+  pages     = {293-308},
+  owner     = {Vincent},
+  timestamp = {2024.06.28},
+  url       = {https://pjmr.org/pjmr/article/view/150},
+}
+
 @Article{Nash1950,
   author    = {Nash, J. F.},
   title     = {Equilibrium points in n-person games},
@@ -51699,6 +51747,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.19},
   url       = {https://global.oup.com/academic/product/the-afterlives-of-walter-scott-9780199644018},
+}
+
+@MastersThesis{Riley2015,
+  author    = {Riley, O.},
+  title     = {Archive of Our Own and the Gift Culture of Fanfiction},
+  school    = {University of Minnesota},
+  year      = {2015},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2024.06.28},
+  url       = {https://conservancy.umn.edu/items/11d3c496-ca07-4447-ae9b-44145835c9d3},
 }
 
 @InProceedings{Riloff1996,
@@ -68502,6 +68561,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4028/www.scientific.net/amm.740.947},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Zucker1980,
+  author    = {Zucker, S. W. and Terzopoulos, D.},
+  title     = {Finding structure in Co-occurrence matrices for texture analysis},
+  journal   = {Computer Graphics and Image Processing},
+  year      = {1980},
+  volume    = {12},
+  number    = {3},
+  pages     = {286–308},
+  doi       = {10.1016/0146-664x(80)90016-7},
+  owner     = {Vincent},
+  timestamp = {2024.06.28},
 }
 
 @Article{Zulkarnain2024,
